--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -72,6 +72,76 @@
             android:clickable="true"
             />
     </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/route1_info_text"
+        android:orientation="vertical"
+        android:weightSum="5"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="bottom"
+        android:background="@android:color/transparent"
+        android:visibility="invisible">
+
+        <LinearLayout android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@android:color/white">
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:text="Route 1:"
+            />
+            </LinearLayout>
+        </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/route2_info_text"
+        android:orientation="vertical"
+        android:weightSum="5"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="bottom"
+        android:background="@android:color/transparent"
+        android:visibility="invisible">
+
+        <LinearLayout android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@android:color/white">
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:text="Route 2:"
+                />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/route3_info_text"
+        android:orientation="vertical"
+        android:weightSum="5"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="bottom"
+        android:background="@android:color/transparent"
+        android:visibility="invisible">
+
+        <LinearLayout android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@android:color/white">
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:text="Route 3:"
+                />
+        </LinearLayout>
+    </LinearLayout>
+
     <LinearLayout
         android:id="@+id/left_drawer"
         android:layout_width="match_parent"
