--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,58 +6,6 @@
     android:id="@+id/drawer_layout"
     >
 
-    <LinearLayout
-        android:id="@+id/route2_info_text"
-        android:orientation="vertical"
-        android:weightSum="5"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="bottom"
-        android:background="@android:color/transparent"
-        android:visibility="invisible">
-
-        <LinearLayout android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@android:color/white">
-            <TextView
-                android:id="@+id/route2_info_textview"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:text="Route 2:"
-                android:maxLines="10"
-                android:scrollbars="vertical"
-                />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/route3_info_text"
-        android:orientation="vertical"
-        android:weightSum="5"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="bottom"
-        android:background="@android:color/transparent"
-        android:visibility="invisible">
-
-        <LinearLayout android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@android:color/white">
-            <TextView
-                android:id="@+id/route3_info_textview"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:text="Route 3:"
-                android:maxLines="10"
-                android:scrollbars="vertical"
-                />
-        </LinearLayout>
-    </LinearLayout>
-
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
@@ -113,6 +61,7 @@
                 android:text="Route 1:"
                 android:maxLines="10"
                 android:scrollbars="vertical"
+                android:textSize="40dp"
                 />
         </LinearLayout>
     </LinearLayout>
