--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -40,6 +40,7 @@
         android:background="@android:color/transparent"
         android:visibility="invisible">
 
+        <!-- goddamn mutherfucking seekbar fuck you
         <SeekBar
             android:id="@+id/trip_pos"
             android:layout_width="match_parent"
@@ -47,21 +48,57 @@
             android:layout_marginTop="800dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:visibility="invisible"/>
+            android:visibility="invisible"/> -->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="4">
+            <Button
+                android:id="@+id/pos0"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Trip position: 0-25%"
+                android:layout_weight="1"
+                />
+
+            <Button
+                android:id="@+id/pos25"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Trip position: 25-50%"
+                android:layout_weight="1"
+                />
+
+            <Button
+                android:id="@+id/pos50"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Trip position: 50-75%"
+                android:layout_weight="1"
+                />
+
+            <Button
+                android:id="@+id/pos75"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Trip position: 75-100%"
+                android:layout_weight="1"
+                />
+
+        </LinearLayout>
 
         <LinearLayout android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="50dp"
             android:background="@android:color/white">
             <TextView
                 android:id="@+id/route_info_textview"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
+                android:layout_height="50dp"
                 android:text="Route 1:"
                 android:maxLines="10"
                 android:scrollbars="vertical"
-                android:textSize="40dp"
+                android:textSize="30dp"
                 />
         </LinearLayout>
     </LinearLayout>
